--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -2,6 +2,7 @@
 
 :root {
   --c-bg: #181818;
+  --c-bg-dark: #181818;
   --c-bg-soft: #222222;
 
   --c-btn: #333333;
@@ -38,6 +39,7 @@ body {
   border-radius: 4px;
   padding: 2px 6px;
   cursor: pointer;
+  user-select: none;
 }
 .button:hover {
   background-color: var(--c-btn-hover);
